<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoppingCartActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/shoppingCartToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pistachio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/mrFarmerLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/mr_farmer_small_logo">

                </ImageView>

                <Button
                    android:id="@+id/shoppingCartDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="right"/>

            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_navigation_menu"
                app:labelVisibilityMode="labeled"
                android:layout_alignParentBottom="true"/>

            <Button
                android:id="@+id/selectAddressButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:text="@string/selectAddressText"
                android:textColor="@color/black"
                android:layout_below="@id/shoppingCartToolbar"/>

            <TextView
                android:id="@+id/shoppingCartAddressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/orderAddressTitle"
                android:layout_marginStart="5sp"
                android:layout_below="@id/selectAddressButton"
                android:layout_marginTop="10sp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/shoppingCartReciName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/orderAddressName"
                android:layout_marginStart="5sp"
                android:layout_below="@id/shoppingCartAddressTitle"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/shoppingCartPhoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/orderAddressPhoneNum"
                android:layout_marginStart="5sp"
                android:layout_below="@id/shoppingCartReciName"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/shoppingCartAddressDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/orderAddressDetails"
                android:layout_marginStart="5sp"
                android:layout_below="@id/shoppingCartPhoneNum"
                android:textColor="@color/grey"
                android:textSize="13sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shoppingCartRecycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:clipToPadding="false"
                android:layout_below="@id/shoppingCartAddressDetails"
                android:layout_above="@id/shippingTitle">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/shippingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shippingFeeTitle"
                android:layout_marginEnd="10sp"
                android:layout_above="@id/totalTitle"
                android:layout_toStartOf="@id/checkOutButton"/>

            <TextView
                android:id="@+id/totalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalTitle"
                android:layout_marginBottom="5sp"
                android:textColor="@color/black"
                android:layout_above="@id/bottom_navigation"
                android:layout_toStartOf="@id/totalPrice" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="5sp"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:layout_above="@id/bottom_navigation"
                android:layout_toStartOf="@id/checkOutButton"/>

            <Button
                android:id="@+id/checkOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkOut"
                android:enabled="false"
                app:backgroundTint="@color/orange"
                android:textStyle="bold"
                android:layout_above="@id/bottom_navigation"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/noItemInCartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noItemInCart"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="5sp"
                android:textSize="20sp"
                android:textColor="@color/pistachio"
                android:visibility="invisible"
                android:layout_above="@id/goToShoppingButton"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/goToShoppingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goToShop"
                app:backgroundTint="@color/pistachio"
                android:textStyle="bold"
                android:visibility="invisible"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/navigation_drawer_view" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>
