<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContactUsActivity">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/contactUsToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pistachio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/mrFarmerLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/mr_farmer_small_logo">

                </ImageView>
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_navigation_menu"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressTitle"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="30sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contactUsToolbar"/>

            <TextView
                android:id="@+id/shopAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopAddress"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTitle"/>

            <TextView
                android:id="@+id/mobileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobileTitle"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="30sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shopAddress"/>

            <TextView
                android:id="@+id/shopMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopMobile"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobileTitle"/>

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailTitle"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="30sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shopMobile"/>

            <TextView
                android:id="@+id/shopEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopEmail"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTitle"/>

            <TextView
                android:id="@+id/websiteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/websiteTitle"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="30sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shopEmail"/>

            <TextView
                android:id="@+id/shopWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopWebsite"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginStart="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/websiteTitle"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/navigation_drawer_view" />

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
