<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/orderProdAdapterImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/orderProdAdapterProdName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productNameTitle"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/orderProdAdapterImage"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/orderProdAdapterProdPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productPriceTitle"
            android:layout_toEndOf="@id/orderProdAdapterImage"
            android:layout_below="@id/orderProdAdapterProdName"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:textColor="@color/orange"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orderProdAdapterProdNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodNum"
            android:layout_toEndOf="@id/orderProdAdapterImage"
            android:layout_below="@id/orderProdAdapterProdPrice"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:textColor="@color/grey"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orderProdAdapterProdTolPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subTotal"
            android:layout_below="@id/orderProdAdapterProdPrice"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>