<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/search_product_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/prodName"
            app:endIconMode="clear_text"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:singleLine="true"
            android:imeOptions="actionDone" />

        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productCategory"
            android:textSize="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_below="@id/search_product_name"/>

        <Spinner
            android:id="@+id/category_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_toEndOf="@id/categoryTitle"
            android:layout_below="@id/search_product_name"/>

        <Button
            android:id="@+id/search_product_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/search_product_name" />

        <TextView
            android:id="@+id/noItemFoundTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/noItemFound"
            android:layout_centerVertical="true"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:visibility="invisible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchProdRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:clipToPadding="false"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/category_type_spinner">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>
</layout>
